Add death sounds.