@@ -4,8 +4,10 @@ import sk.neuromancer.Xune.entity.Player;
 import sk.neuromancer.Xune.entity.Orientation;
 import sk.neuromancer.Xune.entity.Prerequisite;
 import sk.neuromancer.Xune.gfx.SpriteSheet;
+import sk.neuromancer.Xune.sfx.SoundManager;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class Silo extends Building {
 
@@ -14,7 +16,8 @@ public class Silo extends Building {
         setCost(Silo.class, 120);
         setPower(Silo.class, -15);
         setSight(Silo.class, 60);
-        registerPrerequisites(Silo.class, Arrays.asList(new Prerequisite(Powerplant.class)));
+        setDeathSound(Silo.class, SoundManager.SOUND_LONG_EXPLOSION_1);
+        registerPrerequisites(Silo.class, List.of(new Prerequisite(Powerplant.class)));
     }
 
     public Silo(int x, int y, Orientation orientation, Player owner) {
