@@ -2,11 +2,13 @@ package sk.neuromancer.Xune.entity.unit;
 
 import sk.neuromancer.Xune.entity.*;
 import sk.neuromancer.Xune.entity.building.Factory;
+import sk.neuromancer.Xune.entity.building.Helipad;
 import sk.neuromancer.Xune.gfx.SpriteSheet;
 import sk.neuromancer.Xune.level.paths.Pathfinder;
 import sk.neuromancer.Xune.level.paths.Point;
+import sk.neuromancer.Xune.sfx.SoundManager;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static sk.neuromancer.Xune.game.Game.TPS;
 
@@ -17,7 +19,8 @@ public class Buggy extends Unit {
         setCost(Buggy.class, 100);
         setSight(Buggy.class, 50);
         setBuildTime(Buggy.class, TPS * 5);
-        registerPrerequisites(Buggy.class, Arrays.asList(new Prerequisite(Factory.class)));
+        setDeathSound(Buggy.class, SoundManager.SOUND_EXPLOSION_1);
+        registerPrerequisites(Buggy.class, List.of(new Prerequisite(Factory.class)));
     }
 
     public Buggy(float x, float y, Orientation orientation, Player owner) {
